Add comments to readme

--- a/codelab-extensions/hello-world/html/popup.html
+++ b/codelab-extensions/hello-world/html/popup.html
@@ -10,7 +10,12 @@
                 <span id="world">WORLD</span>
             </h1>
             <hr>
-            <span>Chrome Research Lab: 1</span>
+            <span>
+                <a  target="_blank" 
+                    href="https://github.com/dfirence/research-chrome/tree/master/codelab-extensions/hello-world">
+                    Research Lab: 1
+                </a>
+            </span>
         </div>
     </body>
 </html>
