add tooltip to research lab span

--- a/codelab-extensions/lab-6-hello-world/html/popup.html
+++ b/codelab-extensions/lab-6-hello-world/html/popup.html
@@ -10,12 +10,16 @@
                 <span id="world">WORLD</span>
             </h1>
             <hr>
-            <span>
-                <a  target="_blank" 
-                    href="https://github.com/dfirence/research-chrome/tree/master/codelab-extensions/lab-6-hello-world">
-                    Research Lab: 6
-                </a>
-            </span>
+            <div class="cnt-github-link">
+                Research Lab: 6
+                <span class="tooltip-text">
+                    <a  target="_blank" 
+                        href="https://github.com/dfirence/research-chrome/tree/master/codelab-extensions/lab-6-hello-world">
+                        Github Repo
+                    </a>
+                </span>
+            </div>
+
             <hr>
             <div class="cnt-person">
                 First Name<input type="text" id="first-name">
